# ci_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build_ci_linux_and_macos.yml  build_ci_with_vcpkg.yml
src/: main.cpp
tests/: CMakeLists.txt  simple_test.cpp
